--- a/ThoughtsAndPrayersThree/Droid/packages.config
+++ b/ThoughtsAndPrayersThree/Droid/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
+  <package id="SkiaSharp" version="1.59.1" targetFramework="monoandroid71" />
   <package id="sqlite-net" version="1.0.8" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.1.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.0.11" targetFramework="monoandroid71" />
@@ -87,5 +88,10 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading" version="2.2.23" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.23" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.2.23" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.23" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.23" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid71" />
 </packages>
