--- a/ThoughtsAndPrayersThree/iOS/packages.config
+++ b/ThoughtsAndPrayersThree/iOS/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="SkiaSharp" version="1.59.1" targetFramework="xamarinios10" />
   <package id="sqlite-net" version="1.0.8" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.1.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.0.11" targetFramework="xamarinios10" />
@@ -68,7 +69,13 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
   <package id="WindowsAzure.Storage" version="8.5.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.2.23" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.23" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.2.23" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.23" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.23" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
