checkin-new-layout-arrangement
checkin-new-layout-arrangement

--- a/ThoughtsAndPrayersThree/iOS/ThoughtsAndPrayersThree.iOS.csproj
+++ b/ThoughtsAndPrayersThree/iOS/ThoughtsAndPrayersThree.iOS.csproj
@@ -200,6 +200,21 @@
     <BundleResource Include="Resources\beating_heart.json" />
     <BundleResource Include="Resources\checked_done_.json" />
     <BundleResource Include="Resources\like_button.json" />
+    <BundleResource Include="Resources\Raleway-ExtraLight.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
+    <BundleResource Include="Resources\Raleway-ExtraLightItalic.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
+    <BundleResource Include="Resources\Raleway-Light.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
+    <BundleResource Include="Resources\Raleway-Medium.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
+    <BundleResource Include="Resources\Raleway-SemiBold.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDelegate.cs" />
