--- a/ThoughtsAndPrayersThree/Droid/ThoughtsAndPrayersThree.Droid.csproj
+++ b/ThoughtsAndPrayersThree/Droid/ThoughtsAndPrayersThree.Droid.csproj
@@ -220,6 +220,11 @@
     <AndroidAsset Include="Assets\like_button.json" />
     <AndroidAsset Include="Assets\LottieLogo1.json" />
     <AndroidAsset Include="Assets\love_explosion.json" />
+    <AndroidAsset Include="Assets\Raleway-ExtraLight.ttf" />
+    <AndroidAsset Include="Assets\Raleway-ExtraLightItalic.ttf" />
+    <AndroidAsset Include="Assets\Raleway-Light.ttf" />
+    <AndroidAsset Include="Assets\Raleway-Medium.ttf" />
+    <AndroidAsset Include="Assets\Raleway-SemiBold.ttf" />
   </ItemGroup>
   <Import Project="..\ThoughtsAndPrayersThree.LocalData\ThoughtsAndPrayersThree.LocalData.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.LocalData\ThoughtsAndPrayersThree.LocalData.projitems')" />
   <Import Project="..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems')" />
