Add Tap Prayer working
Need to add Try around code and also need to make return Http Codes

--- a/ThoughtsAndPrayersThree/Droid/ThoughtsAndPrayersThree.Droid.csproj
+++ b/ThoughtsAndPrayersThree/Droid/ThoughtsAndPrayersThree.Droid.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>ThoughtsAndPrayersThree.Droid</RootNamespace>
     <AssemblyName>ThoughtsAndPrayersThree.Droid</AssemblyName>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -226,6 +226,7 @@
     <AndroidAsset Include="Assets\Raleway-Medium.ttf" />
     <AndroidAsset Include="Assets\Raleway-SemiBold.ttf" />
   </ItemGroup>
+  <Import Project="..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems')" />
   <Import Project="..\ThoughtsAndPrayersThree.LocalData\ThoughtsAndPrayersThree.LocalData.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.LocalData\ThoughtsAndPrayersThree.LocalData.projitems')" />
   <Import Project="..\ThoughtsAndPrayersThree\ThoughtsAndPrayersThree.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree\ThoughtsAndPrayersThree.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
