--- a/ThoughtsAndPrayersThree/Droid/packages.config
+++ b/ThoughtsAndPrayersThree/Droid/packages.config
@@ -14,7 +14,11 @@
   <package id="NETStandard.Library" version="1.6.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="SkiaSharp" version="1.59.1" targetFramework="monoandroid71" />
-  <package id="sqlite-net" version="1.0.8" targetFramework="monoandroid71" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid81" />
   <package id="System.AppContext" version="4.1.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.0.11" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="monoandroid71" />
