Refactored with LocalData and Function
Refactored with LocalData and Function

--- a/ThoughtsAndPrayersThree/Droid/ThoughtsAndPrayersThree.Droid.csproj
+++ b/ThoughtsAndPrayersThree/Droid/ThoughtsAndPrayersThree.Droid.csproj
@@ -242,6 +242,7 @@
     <AndroidAsset Include="Assets\Raleway-Medium.ttf" />
     <AndroidAsset Include="Assets\Raleway-SemiBold.ttf" />
   </ItemGroup>
+  <Import Project="..\ThoughtsAndPrayersThree.Shared\ThoughtsAndPrayersThree.Shared.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.Shared\ThoughtsAndPrayersThree.Shared.projitems')" />
   <Import Project="..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems')" />
   <Import Project="..\ThoughtsAndPrayersThree.LocalData\ThoughtsAndPrayersThree.LocalData.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree.LocalData\ThoughtsAndPrayersThree.LocalData.projitems')" />
   <Import Project="..\ThoughtsAndPrayersThree\ThoughtsAndPrayersThree.projitems" Label="Shared" Condition="Exists('..\ThoughtsAndPrayersThree\ThoughtsAndPrayersThree.projitems')" />
