--- a/ThoughtsAndPrayersThree/Droid/packages.config
+++ b/ThoughtsAndPrayersThree/Droid/packages.config
@@ -3,10 +3,8 @@
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="monoandroid71" />
   <package id="Com.Airbnb.Android.Lottie" version="2.2.5.0" targetFramework="monoandroid71" />
   <package id="Com.Airbnb.Xamarin.Forms.Lottie" version="2.3.4" targetFramework="monoandroid71" />
+  <package id="Microsoft.AppCenter" version="1.6.1" targetFramework="monoandroid81" />
   <package id="Microsoft.Azure.DocumentDB.Core" version="1.6.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.Azure.Mobile" version="0.17.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.Azure.Mobile.Analytics" version="0.17.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.Azure.Mobile.Crashes" version="0.17.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="monoandroid71" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="monoandroid71" />
