--- a/ThoughtsAndPrayersThree/iOS/packages.config
+++ b/ThoughtsAndPrayersThree/iOS/packages.config
@@ -3,10 +3,10 @@
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="xamarinios10" />
   <package id="Com.Airbnb.iOS.Lottie" version="2.1.3.0" targetFramework="xamarinios10" />
   <package id="Com.Airbnb.Xamarin.Forms.Lottie" version="2.3.4" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.DocumentDB.Core" version="1.6.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile" version="0.17.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Analytics" version="0.17.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Crashes" version="0.17.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="xamarinios10" />
