--- a/ThoughtsAndPrayersThree/ThoughtsAndPrayersThree.Functions/ThoughtsAndPrayersThree.Functions.csproj
+++ b/ThoughtsAndPrayersThree/ThoughtsAndPrayersThree.Functions/ThoughtsAndPrayersThree.Functions.csproj
@@ -3,7 +3,9 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>    
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Language" Version="1.0.1-preview" />    
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.9.1" />    
+    <PackageReference Include="Microsoft.Azure.Management.CognitiveServices" Version="4.0.0" />    
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.2" />    
     <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
   </ItemGroup>
@@ -18,9 +20,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Functions\" />
   </ItemGroup>
   <Import Project="..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems" Label="Shared" />
   <Import Project="..\ThoughtsAndPrayersThree.Shared\ThoughtsAndPrayersThree.Shared.projitems" Label="Shared" />
