--- a/ThoughtsAndPrayersThree/ThoughtsAndPrayersThree.Functions/ThoughtsAndPrayersThree.Functions.csproj
+++ b/ThoughtsAndPrayersThree/ThoughtsAndPrayersThree.Functions/ThoughtsAndPrayersThree.Functions.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Azure.Management.CognitiveServices" Version="4.0.0" />    
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.2" />    
     <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
+    <PackageReference Include="Microsoft.Azure.NotificationHubs" Version="1.0.9" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -20,6 +21,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NotificationRegistrationFunctions\" />
+    <Folder Include="NotificationFunctions\" />
   </ItemGroup>
   <Import Project="..\ThoughtsAndPrayersThree.CosmosDB\ThoughtsAndPrayersThree.CosmosDB.projitems" Label="Shared" />
   <Import Project="..\ThoughtsAndPrayersThree.Shared\ThoughtsAndPrayersThree.Shared.projitems" Label="Shared" />
