--- a/ThoughtsAndPrayersThree/iOS/packages.config
+++ b/ThoughtsAndPrayersThree/iOS/packages.config
@@ -75,6 +75,7 @@
   <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
   <package id="WindowsAzure.Storage" version="8.5.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Azure.NotificationHubs.iOS" version="1.2.5.2" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.2.23" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.23" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.2.23" targetFramework="xamarinios10" />
