--- a/ThoughtsAndPrayersThree/ThoughtsAndPrayersThree.Functions/ThoughtsAndPrayersThree.Functions.csproj
+++ b/ThoughtsAndPrayersThree/ThoughtsAndPrayersThree.Functions/ThoughtsAndPrayersThree.Functions.csproj
@@ -14,6 +14,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="**/*" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
