--- a/ThoughtsAndPrayersThree/iOS/Info.plist
+++ b/ThoughtsAndPrayersThree/iOS/Info.plist
@@ -50,5 +50,7 @@
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.chung.xamarin.ThoughtsAndPrayersThreeNotifications</string>
+	<key>XSLaunchImageAssets</key>
+	<string>Assets.xcassets/LaunchImage.launchimage</string>
 </dict>
 </plist>
