--- a/ThoughtsAndPrayersThree/iOS/Info.plist
+++ b/ThoughtsAndPrayersThree/iOS/Info.plist
@@ -4,16 +4,10 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>ThoughtsAndPrayersThree</string>
-	<key>CFBundleName</key>
-	<string>ThoughtsAndPrayersThreeNotifications</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
-	<key>CFBundleVersion</key>
-	<string>1.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>11.3</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
@@ -47,12 +41,18 @@
 		<string>remote-notification</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.chung.xamarin.ThoughtsAndPrayersThreeNotifications</string>
+	<string>dev.T3ProdVersionOne</string>
 	<key>XSLaunchImageAssets</key>
 	<string>Assets2.xcassets/LaunchImage3.launchimage</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>CFBundleShortVersionString</key>
+	<string>2.1.4</string>
+	<key>CFBundleVersion</key>
+	<string>2.1.4</string>
+	<key>CFBundleName</key>
+	<string>T+P</string>
 </dict>
 </plist>
